--- a/.github/workflows/regressivo.yml
+++ b/.github/workflows/regressivo.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: '8'
-          distribution: 'oracle'
+          distribution: 'adopt-hotspot'
           cache: maven
 
       - name: Instalar Chrome
