--- a/.github/workflows/regressivo.yml
+++ b/.github/workflows/regressivo.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: '8'
-          distribution: 'adopt-openj9'
+          distribution: 'adopt'
           cache: maven
 
       - name: Instalar Chrome
@@ -26,7 +26,7 @@ jobs:
       - uses: nanasess/setup-chromedriver@v2
       - run:
           export DISPLAY=:99
-          chromedriver--url-base=/wd/hub &
+          chromedriver --url-base=/wd/hub &
           sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
 
       - name: Run Test
